[gd_scene load_steps=12 format=3 uid="uid://dugxbtc8v8qvm"]

[ext_resource type="Script" path="res://levels/level_4.gd" id="1_oomo5"]
[ext_resource type="TileSet" uid="uid://b0ssei7yt3pu4" path="res://levels/tileset.tres" id="1_tk1w6"]
[ext_resource type="PackedScene" uid="uid://cano0tskc67f2" path="res://interactable/OxygenTank.tscn" id="2_r46s6"]
[ext_resource type="Texture2D" uid="uid://dhl13f8jqqhl0" path="res://assets/tilemap_sf/Grafika/bg.png" id="2_rexgm"]
[ext_resource type="PackedScene" uid="uid://clattllvt4rmf" path="res://player/PlayerController.tscn" id="2_srwuk"]
[ext_resource type="PackedScene" uid="uid://dfjb2dpxphywj" path="res://sparks/Sparks.tscn" id="4_45bmj"]
[ext_resource type="PackedScene" uid="uid://bqlq31nc6a5wy" path="res://button/Button.tscn" id="5_qlsap"]
[ext_resource type="Texture2D" uid="uid://bgbwwluv1vt7t" path="res://assets/exit-arrow.png" id="7_61bk7"]
[ext_resource type="PackedScene" uid="uid://c1hftvu2picpq" path="res://interactable/Door.tscn" id="8_bp50w"]
[ext_resource type="PackedScene" uid="uid://biq12otwmpl0e" path="res://interactable/Medkit.tscn" id="8_q2e3c"]
[ext_resource type="PackedScene" uid="uid://d1itk4ygdexkr" path="res://levels/level_5.tscn" id="9_oi7ce"]

[node name="level_4" type="Node2D" node_paths=PackedStringArray("button")]
script = ExtResource("1_oomo5")
button = NodePath("Puzzle1/Button")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2(0, 1239.22)
transform = Transform2D(1, 0, 0, 1, 0, 1239.22)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 1080)

[node name="Bg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-92, -1239.53)
texture = ExtResource("2_rexgm")

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(0.717647, 0.717647, 0.717647, 1)
texture_filter = 1
position = Vector2(1, 0)
tile_set = ExtResource("1_tk1w6")
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(-327684, 786432, 15, -262148, 786432, 15, -196612, 786432, 15, -131076, 786432, 15, -65540, 786432, 15, -327683, 786432, 15, -262147, 655360, 9, -196611, 655360, 10, -131075, 262144, 11, -65539, 851968, 15, -327682, 786432, 15, -262146, 655360, 9, -196610, 655360, 10, -131074, 262144, 11, -65538, 851968, 15, -327681, 786432, 15, -262145, 655360, 9, -196609, 655360, 10, -131073, 262144, 11, -65537, 851968, 15, -393216, 786432, 15, -327680, 655360, 9, -262144, 655360, 10, -196608, 262144, 11, -131072, 851968, 15, -393215, 786432, 15, -327679, 655360, 9, -262143, 655360, 10, -196607, 262144, 11, -131071, 851968, 15, -393214, 786432, 15, -327678, 655360, 9, -262142, 655360, 10, -196606, 262144, 11, -131070, 851968, 15, -393213, 786432, 15, -327677, 655360, 9, -262141, 655360, 10, -196605, 262144, 11, -131069, 851968, 15, -393212, 786432, 15, -327676, 655360, 9, -262140, 655360, 10, -196604, 262144, 11, -131068, 786432, 15, -393211, 786432, 15, -327675, 655360, 9, -262139, 655360, 10, -196603, 262144, 11, -131067, 786432, 15, -393210, 786432, 15, -327674, 655360, 9, -262138, 655360, 10, -196602, 262144, 11, -131066, 786432, 15, -393209, 786432, 15, -327673, 655360, 9, -262137, 655360, 10, -196601, 262144, 11, -131065, 786432, 15, -393208, 786432, 15, -327672, 1179648, 9, -262136, 655360, 10, -196600, 262144, 11, -131064, 786432, 15, -393207, 786432, 15, -327671, 655360, 9, -262135, 655360, 10, -196599, 262144, 11, -131063, 786432, 15, -393206, 786432, 15, -327670, 655360, 9, -262134, 655360, 10, -196598, 262144, 11, -131062, 786432, 15, -393205, 786432, 15, -327669, 786432, 15, -262133, 786432, 15, -196597, 786432, 15, -131061, 786432, 15, -458743, 327680, 10, -458745, 196608, 10, -458744, 196608, 10, -524281, 196608, 10, -524280, 196608, 10, -524279, 196608, 10, -458746, 1376256, 7, -524282, 1376256, 7, -524278, 1376256, 7, -458742, 1376256, 7, -589818, 1376256, 7, -589817, 196608, 10, -589816, 196608, 10, -589815, 196608, 10, -589814, 1376256, 7, -655350, 1376256, 7, -655351, 196608, 10, -655352, 196608, 10, -655353, 196608, 10, -655354, 1376256, 7, -720890, 1376256, 7, -720889, 196608, 10, -720888, 196608, 10, -720887, 196608, 10, -720886, 1376256, 7, -786422, 1376256, 7, -786423, 196608, 10, -786424, 196608, 10, -786425, 196608, 10, -786426, 1376256, 7, -851962, 1376256, 7, -851961, 196608, 10, -851960, 196608, 10, -851959, 196608, 10, -851958, 1376256, 7, -917494, 1376256, 7, -917495, 196608, 10, -917496, 196608, 10, -917497, 196608, 10, -917498, 1376256, 7, -983034, 1376256, 7, -983033, 196608, 10, -983032, 196608, 10, -983031, 196608, 10, -983030, 1376256, 7, -458747, 786432, 15, -524283, 786432, 15, -589819, 786432, 15, -655355, 786432, 15, -720891, 786432, 15, -786427, 786432, 15, -851963, 786432, 15, -917499, 786432, 15, -458741, 786432, 15, -524277, 786432, 15, -589813, 786432, 15, -655349, 786432, 15, -720885, 786432, 15, -786421, 786432, 15, -851957, 786432, 15, -917493, 786432, 15, -983029, 786432, 15, -1048565, 786432, 15, -983035, 786432, 15, -1048571, 786432, 15, -1048570, 1245184, 7, -1114106, 1245184, 7, -1179642, 1245184, 7, -1245178, 1245184, 7, -1310714, 1245184, 7, -1048566, 1245184, 7, -1114102, 1245184, 7, -1179638, 1245184, 7, -1245174, 1245184, 7, -1310710, 1245184, 7, -1376246, 1245184, 7, -1441782, 1245184, 7, -1507318, 1245184, 7, -1376250, 1245184, 7, -1441786, 1245184, 7, -1507322, 1245184, 7, -1048567, 196608, 10, -1048568, 196608, 10, -1114104, 196608, 10, -1114105, 196608, 10, -1179641, 196608, 10, -1245177, 196608, 10, -1310713, 196608, 10, -1376249, 196608, 10, -1441785, 196608, 10, -1507321, 196608, 10, -1507320, 196608, 10, -1441783, 196608, 10, -1376247, 196608, 10, -1310711, 196608, 10, -1245175, 196608, 10, -1179639, 196608, 10, -1114103, 196608, 10, -1048569, 196608, 10, -1245176, 196608, 10, -1310712, 196608, 10, -1376248, 196608, 10, -1441784, 196608, 10, -1507319, 196608, 10, -1179640, 196608, 10, -1114101, 851968, 15, -1179637, 851968, 15, -1245173, 851968, 15, -1310709, 851968, 15, -1376245, 851968, 15, -1441781, 851968, 15, -1507317, 786432, 15, -1114107, 851968, 15, -1179643, 851968, 15, -1245179, 851968, 15, -1310715, 851968, 15, -1376251, 851968, 15, -1441787, 851968, 15, -1507323, 851968, 15, -1572857, 196608, 10, -1572856, 196608, 10, -1572855, 196608, 10, -1638393, 196608, 10, -1638392, 196608, 10, -1638391, 196608, 10, -1703929, 655360, 10, -1703928, 655360, 10, -1703927, 655360, 10, -1572858, 196608, 10, -1638394, 196608, 10, -1703930, 655360, 10, -1769466, 851968, 8, -1769464, 851968, 8, -1769465, 655360, 9, -1769463, 917504, 9, -1572859, 786432, 15, -1638395, 786432, 15, -1703931, 786432, 15, -1769467, 786432, 15, -1835003, 786432, 15, -1835002, 786432, 15, -1835001, 786432, 15, -1835000, 786432, 15, -1834999, 786432, 15, -1507316, 786432, 15, -1507315, 786432, 15, -1507314, 786432, 15, -1507313, 786432, 15, -1507312, 786432, 15, -1507311, 786432, 15, -1507310, 786432, 15, -1507309, 786432, 15, -1507308, 786432, 15, -1572844, 786432, 15, -1638380, 786432, 15, -1703916, 786432, 15, -1769452, 786432, 15, -1834988, 786432, 15, -1834989, 786432, 15, -1834990, 786432, 15, -1834991, 786432, 15, -1834992, 786432, 15, -1834993, 786432, 15, -1834994, 786432, 15, -1834995, 786432, 15, -1834996, 786432, 15, -1834997, 786432, 15, -1834998, 786432, 15, -1769462, 851968, 8, -1769461, 655360, 9, -1769460, 851968, 8, -1769459, 1179648, 9, -1769458, 851968, 8, -1769457, 655360, 9, -1769456, 851968, 8, -1769455, 655360, 9, -1769454, 851968, 8, -1769453, 655360, 9, -1703926, 655360, 10, -1703925, 655360, 10, -1703924, 655360, 10, -1703923, 655360, 10, -1703922, 655360, 10, -1703921, 655360, 10, -1703920, 655360, 10, -1703919, 655360, 10, -1703918, 655360, 10, -1703917, 655360, 10, -1638390, 196608, 10, -1572854, 196608, 10, -1572853, 196608, 10, -1572852, 196608, 10, -1572851, 196608, 10, -1572850, 196608, 10, -1572849, 196608, 10, -1638389, 196608, 10, -1638388, 196608, 10, -1638387, 196608, 10, -1638386, 196608, 10, -1638385, 196608, 10, -1638384, 196608, 10, -1638383, 196608, 10, -1638382, 196608, 10, -1638381, 196608, 10, -1572845, 196608, 10, -1572846, 196608, 10, -1572847, 196608, 10, -1572848, 196608, 10)
layer_1/name = "details"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-327680, 851968, 9, -327678, 851968, 9, -327676, 851968, 9, -262146, 851968, 9, -327674, 851968, 9, -327675, 983040, 5, -589818, 983040, 7, -589814, 983040, 7, -786426, 983040, 5)
layer_2/name = "interactions"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "WIRE"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="PlayerController" parent="." instance=ExtResource("2_srwuk")]
position = Vector2(543, -432)

[node name="Puzzle1" type="Node" parent="."]

[node name="Button" parent="Puzzle1" instance=ExtResource("5_qlsap")]
position = Vector2(479, -751)
color = Color(0.427451, 0.972549, 0, 1)

[node name="OxygenTank" parent="Puzzle1" instance=ExtResource("2_r46s6")]
visible = false
position = Vector2(472, -514)

[node name="OxygenTank2" parent="Puzzle1" instance=ExtResource("2_r46s6")]
visible = false
position = Vector2(473, -421)

[node name="Sparks" parent="Puzzle1" instance=ExtResource("4_45bmj")]
position = Vector2(538, -557)

[node name="Sparks2" parent="Puzzle1" instance=ExtResource("4_45bmj")]
position = Vector2(537, -860)

[node name="Puzzle2" type="Node" parent="."]

[node name="Sparks1" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(474, -1051)
scale = Vector2(0.695, 0.695)

[node name="Sparks2" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(591, -1128)
scale = Vector2(0.695, 0.695)

[node name="Sparks3" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(473, -1191)
scale = Vector2(0.695, 0.695)

[node name="Sparks4" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(585, -1255)
scale = Vector2(0.695, 0.695)

[node name="Sparks5" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(467, -1328)
scale = Vector2(0.695, 0.695)

[node name="Sparks6" parent="Puzzle2" instance=ExtResource("4_45bmj")]
position = Vector2(581, -1402)
scale = Vector2(0.695, 0.695)

[node name="Button2" parent="Puzzle2" instance=ExtResource("5_qlsap")]
position = Vector2(614, -902)
color = Color(0, 0.611765, 0.984314, 1)

[node name="Timer" type="Timer" parent="Puzzle2"]

[node name="Door" parent="." instance=ExtResource("8_bp50w")]
position = Vector2(866, -1692)
change_to = ExtResource("9_oi7ce")

[node name="Exit-arrow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(674, -548)
texture = ExtResource("7_61bk7")

[node name="Medkit" parent="." instance=ExtResource("8_q2e3c")]
position = Vector2(423, -1632)

[node name="Medkit2" parent="." instance=ExtResource("8_q2e3c")]
position = Vector2(487, -1633)

[node name="Medkit3" parent="." instance=ExtResource("8_q2e3c")]
position = Vector2(554, -1632)

[connection signal="pressed" from="Puzzle1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Puzzle2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Puzzle2/Timer" to="." method="_on_timer_timeout"]
